Fixed top header gap.

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -8,13 +8,14 @@ body{
 }
 
 Header{
+    top: 0;
     height: 69px;
-    display:Flex;
+    display: flex;
     border-bottom: solid 1px Seashell;
     position: fixed;
     width: 100%;
     background-color: black;
-    padding-top: 10px;
+    padding-top: 20px;
     z-index: 5;
 }
 
@@ -28,11 +29,12 @@ Header{
 header span{
     text-decoration: underline;
     margin-left: 15px;
+    padding-right: 10px;
 }
 
 .nav_list{
     padding-top: 20px;
-    
+    padding-right: 10px;
 }
 
 .main_img_centre{
@@ -95,7 +97,8 @@ teaofmonth{
     width: 1000px;
     display:flex;
     flex-wrap: wrap;
-    justify-content: space-between
+    justify-content: space-between;
+    font-weight: bold;
 }
 
 .image_2_centre{
@@ -107,6 +110,7 @@ teaofmonth{
     width: 1000px;
     display:flex;
     justify-content: center;
+    font-weight: bold;
 }
 
 .location_centre{
